# src/node/model/registrationRequest.ts
@@ -1,0 +1,36 @@
+/**
+ * swagger
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export class RegistrationRequest {
+    'email': string;
+    'password': string;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "email",
+            "baseName": "email",
+            "type": "string"
+        },
+        {
+            "name": "password",
+            "baseName": "password",
+            "type": "string"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return RegistrationRequest.attributeTypeMap;
+    }
+}
+
