# src/node/model/registrationResponse.ts
@@ -1,0 +1,30 @@
+/**
+ * swagger
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export class RegistrationResponse {
+    'userId'?: string;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "userId",
+            "baseName": "userId",
+            "type": "string"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return RegistrationResponse.attributeTypeMap;
+    }
+}
+
